# trainingGrantApp

./: .gitignore  ENVIRONMENT_SETUP_INSTRUCTIONS.md  README.md  SERVICE_MANAGEMENT.md  app.py  auth.py  config.py  email_utils.py  env.example  forms.py  logging_config.py  lookups.py  main.py  manage_app.bat  microsoft_graph.py  models.py  package-lock.json  requirements.txt  setup_db.py  simple_test.py  test_profile_pictures.py  test_seq_logging.py  test_upload.txt  utils.py
FlaskSurveyForm/: .gitignore  README.md  admin.txt  app.py  auth.py  config.py  forms.py  login_page.html  lookups.py  main.py  migrate_trainees.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_db.py  simple_test.py  test_course_cost_fix.py  test_new_trainees.py  training_forms.db  utils.py
FlaskSurveyForm/attached_assets/: Claim-Form-5-revised-Training.xlsx  EmployeeListFirstLastDept.csv
FlaskSurveyForm/docs/: README.md  api.md  architecture.md  database.md  environment-setup.md  file-management.md  forms.md  trainer_email_feature_summary.md  training_name_feature_summary.md
FlaskSurveyForm/scripts/: EXPORT_INSTRUCTIONS.md  add_catalog_course_cost.py  add_course_cost_migration.py  add_trainer_email_migration.py  add_training_name_migration.py  export_data.ps1  export_data_manual.sql  export_training_catalog.py  import_training_info.py  import_trainings.py  populate_training_hours_from_excel.py  remove_food_cost_migration.py  schema_validator.py  setup_environment.py  setup_mariadb_production.sql  setup_mariadb_staging.sql  switch_environment.cmd  (+1 more)
(+148 files in other folders)
