[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator==2.2.0",
    "flask-wtf==1.2.2",
    "flask==3.1.0",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.10",
    "pymysql==1.1.1",
    "werkzeug==3.1.3",
    "wtforms==3.2.1",
    "openpyxl==3.1.5",
    "blinker==1.9.0",
    "click==8.1.8",
    "dnspython==2.7.0",
    "et-xmlfile==2.0.0",
    "flask-ldap3-login==1.0.2",
    "flask-login==0.6.3",
    "greenlet==3.1.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "ldap3==2.9.1",
    "markupsafe==3.0.2",
    "numpy==2.2.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "pyasn1==0.6.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "sqlalchemy==2.0.40",
    "typing-extensions==4.13.0",
    "tzdata==2025.2",
]
